@@ -1,6 +1,7 @@
 1.5
 ---
 * Improved basic demo, validating confirm-password field after password changed
+* Fixed basic validation to pass the untrimmed input value as the first parameter to validation methods, changed required accordingly; breaks existing custom method that rely on the trimming
 
 1.4
 ---
